@@ -138,7 +138,7 @@
               <value>conf/log4j.properties</value>
             </property>
           </systemPropertyVariables>
-          <argLine>${jacoco.agent} -Xms512m -Xmx1500m</argLine>
+          <argLine>${jacoco.agent} -Xms512m -Xmx1500m --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</argLine>
           <parallel>methods</parallel>
           <useUnlimitedThreads>true</useUnlimitedThreads>
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
@@ -560,6 +560,11 @@
       <artifactId>logback-classic</artifactId>
       <version>1.2.13</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.googlejavaformat</groupId>
+      <artifactId>google-java-format</artifactId>
+      <version>1.25.2</version>
     </dependency>
   </dependencies>
   <properties>
